# mcp-app

./: .env.example  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  pyproject.toml  tester.http
backend/: .gitignore  README.md  app.py  main.py  models.py  pyproject.toml  test_api.py
mcp/: .gitignore  pyproject.toml  test_ideate.py
mcp/src/: app.py  auth.py  careem_mcp_server.py  config.py  delivery_mcp_server.py  ideate_mcp_server.py  mcp_server.py  pizzaz_mcp_server.py  property_finder_mcp_server.py  server.ts  talabat_mcp_server.py  test_talabat_api.py  web_search_mcp_server.py
src/: __init__.py  app.py  config.py  mcp_server.py
web/: .dockerignore  Dockerfile  README.md  build-all.mts  docs-apps-sdk.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.mts
web/scripts/: bump-version.mts
web/src/: index.css  types.ts
web/src/careem-quick/: index.tsx
web/src/careem-restaurants/: index.tsx
web/src/delivery-quick/: index.tsx
web/src/delivery-restaurants/: index.tsx
web/src/kitchen-sink-lite/: index.tsx  kitchen-sink-lite.css  kitchen-sink-lite.tsx
web/src/mixed-auth-past-orders/: index.jsx
web/src/mixed-auth-search/: SliceCard.jsx  index.jsx
web/src/property-finder/: index.tsx
web/src/shopping-cart/: index.tsx
web/src/vendors-list/: index.tsx  test-vendors-basic.html
